* 53_samba-common/50quota: added more debug (Bug #35844)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53467 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.166-78) unstable; urgency=medium
+
+  * 53_samba-common/50quota: added more debug (Bug #35844)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 09 Sep 2014 08:53:08 +0200
+
 ucs-test (4.0.166-77) unstable; urgency=low
 
   * Bug #30751: 00_base/99check_log_files
