--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (5.0.7-1) unstable; urgency=medium
+
+  * 53_samba-common/50quota: added more debug (Bug #35844)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 09 Sep 2014 08:53:08 +0200
+
 ucs-test (5.0.6-1) unstable; urgency=medium
 
   * Added missing file: tests/52_s4connector/138sync_gpo (Bug #27290)
