--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-s4-connector (8.0.33-82) unstable; urgency=low
+
+  * fixed sync_mode check in post_con_modify_functions (Bug #35251) 
+
+ -- Felix Botner <botner@univention.de>  Tue, 09 Sep 2014 09:43:30 +0200
+
 univention-s4-connector (8.0.33-81) unstable; urgency=medium
 
   * Don't set the telephoneNumber to the otherTelephoneNumber while
