fixed sync_mode check in post_con_modify_functions (Bug #35251)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53470 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-s4-connector (9.0.14-1) unstable; urgency=low
+
+  * fixed sync_mode check in post_con_modify_functions (Bug #35251) 
+
+ -- Felix Botner <botner@univention.de>  Tue, 09 Sep 2014 09:46:06 +0200
+
 univention-s4-connector (9.0.13-1) unstable; urgency=medium
 
   * Don't set the telephoneNumber to the otherTelephoneNumber while
