--- a/services/univention-printserver/debian/changelog
+++ b/services/univention-printserver/debian/changelog
@@ -1,3 +1,9 @@
+univention-printserver (7.0.11-3) unstable; urgency=medium
+
+  * New UCR Variable samba/force_printername (Bug #33505)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 09 Sep 2014 15:05:14 +0200
+
 univention-printserver (7.0.11-2) unstable; urgency=medium
 
   * Set "force printername" in cups-printers listener (Bug #33505)
