--- a/management/univention-directory-notifier/debian/changelog
+++ b/management/univention-directory-notifier/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-notifier (9.0.2-2) unstable; urgency=medium
+
+  * Fix typo in 15univention-directory-notifier-post.inst (Bug #35723)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 09 Sep 2014 17:57:43 +0200
+
 univention-directory-notifier (9.0.2-1) unstable; urgency=medium
 
   * Changed quoting in 15univention-directory-notifier-post.inst
