--- a/management/univention-directory-notifier/debian/changelog
+++ b/management/univention-directory-notifier/debian/changelog
@@ -1,3 +1,10 @@
+univention-directory-notifier (8.0.1-5) unstable; urgency=medium
+
+  * Wait for the notifier start in 15univention-directory-notifier-
+    post.inst (Bug #35723)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 09 Sep 2014 20:37:17 +0200
+
 univention-directory-notifier (8.0.1-4) unstable; urgency=medium
 
   * Fix typo in 15univention-directory-notifier-post.inst (Bug #35723)
