--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.166-79) unstable; urgency=medium
+
+  * 53_samba-common/50quota: added more debug (Bug #35844)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 10 Sep 2014 06:26:27 +0200
+
 ucs-test (4.0.166-78) unstable; urgency=medium
 
   * 53_samba-common/50quota: added more debug (Bug #35844)
