* 53_samba-common/50quota: added more debug (Bug #35844)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53505 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (5.0.8-1) unstable; urgency=medium
+
+  * 53_samba-common/50quota: added more debug (Bug #35844)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 10 Sep 2014 06:26:27 +0200
+
 ucs-test (5.0.7-1) unstable; urgency=medium
 
   * 53_samba-common/50quota: added more debug (Bug #35844)
