Bug #35852 uldap: Fix LDAP reconnect count
python-2.4.15 also re-connects internally for the start_tls_s() call,
which leads to the re-connect being done n^2 times now.

Remove the hand-rolled loop in favour of the python-ldap internal
handling, as calling ReconnectLDAPObject(retry_max=1) would disable the
re-tries for all other operations.

Also fix a string splitting error: "string" is deprecated and no longer
imported.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53508 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-python/debian/changelog
+++ b/base/univention-python/debian/changelog
@@ -1,3 +1,9 @@
+univention-python (8.0.1-1) unstable; urgency=low
+
+  * Bug #35852: Fix LDAP reconnect count
+
+ -- Philipp Hahn <hahn@univention.de>  Tue, 09 Sep 2014 20:13:58 +0200
+
 univention-python (8.0.0-3) unstable; urgency=low
 
   * Call explicit python_support (Bug #35138)
