--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (5.0.9-1) unstable; urgency=low
+
+  * Bug #35741: 10_ldap/25reconnect_uldap: revert subprocess.call.wait
+
+ -- Philipp Hahn <hahn@univention.de>  Tue, 09 Sep 2014 20:26:29 +0200
+
 ucs-test (5.0.8-1) unstable; urgency=medium
 
   * 53_samba-common/50quota: added more debug (Bug #35844)
