* Bug #35711: renamed the variable name to ucs/web/license/requested=true
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53517 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (4.0.99-6) unstable; urgency=low
+
+  * Bug #35711: renamed the variable name to ucs/web/license/requested=true
+
+ -- Alexander Kramer <kramer@univention.de>  Wed, 10 Sep 2014 10:39:11 +0200
+
 univention-management-console-module-udm (4.0.99-5) unstable; urgency=low
 
   * Bug #35711: Added variable creation to __init__.py
