renamed the variable name to ucs/web/license/requested=true (Bug #35711)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53522 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (4.0.3-5) unstable; urgency=low
+
+  * Bug #35711: renamed the variable name to ucs/web/license/requested=true
+
+ -- Alexander Kramer <kramer@univention.de>  Wed, 10 Sep 2014 11:22:45 +0200
+
 univention-management-console-frontend (4.0.3-4) unstable; urgency=low
 
   * Using tools.isTrue instead of Boolean (Bug #35711)
