--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (5.0.4-3) unstable; urgency=low
+
+  * Bug #35711: renamed the variable name to ucs/web/license/requested=true
+
+ -- Alexander Kramer <kramer@univention.de>  Wed, 10 Sep 2014 11:17:27 +0200
+
 univention-management-console-module-udm (5.0.4-2) unstable; urgency=low
 
   * Variable will be only set if request is successful (Bug #35711)
