* Fixed translation error in ApplianceWizard.js (Bug #34090)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53529 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (7.0.69-61) unstable; urgency=low
+
+  * Fixed translation error in ApplianceWizard.js (Bug #34090)
+
+ -- Drees Dormann <dormann@univention.de>  Wed, 10 Sep 2014 11:06:47 +0200
+
 univention-system-setup (7.0.69-60) unstable; urgency=low
 
   * Removed creation of umc/web/activation_email (Bug #35711)
