* Bug #35711: fix checking for ucs/web/license/requested
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53537 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (3.0.152-44) unstable; urgency=low
+
+  * Bug #35711: fix checking for ucs/web/license/requested
+
+ -- Alexander Kramer <kramer@univention.de>  Wed, 10 Sep 2014 13:44:45 +0200
+
 univention-management-console-frontend (3.0.152-43) unstable; urgency=low
 
   * Bug #35711: renamed the variable name to ucs/web/license/requested=true 
