--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (4.0.3-6) unstable; urgency=low
+
+  * Bug #35711: fix checking for ucs/web/license/requested
+
+ -- Alexander Kramer <kramer@univention.de>  Wed, 10 Sep 2014 13:51:51 +0200
+
 univention-management-console-frontend (4.0.3-5) unstable; urgency=low
 
   * Bug #35711: renamed the variable name to ucs/web/license/requested=true
