Revert "Bug #35729 lib: Fix stall in dpkg status pipe reading code"
This reverts commit 2e4a692c8ff9534217ef4a3a4efe8698e941cb7d.

Conflicts:
	branches/ucs-3.2/ucs-3.2-3/base/univention-lib/debian/changelog

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53543 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,9 @@
+univention-lib (3.0.26-67) unstable; urgency=low
+
+  * Bug #35729: revert r53120: Fix stall in dpkg status pipe reading code
+
+ -- Philipp Hahn <hahn@univention.de>  Thu, 28 Aug 2014 12:43:18 +0200
+
 univention-lib (3.0.26-66) unstable; urgency=medium
 
   * Bug #31319: make sure that atjobs is EINTR-safe
