* ucs-ec2-create: upon creating a windows vm instead of an initial connect   ports 139 and 445 are scanned to se if vm is reachable (Bug #35850) * utils.sh: added function install_ucs_windows_tools (Bug #35854)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53603 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/debian/changelog
+++ b/test/ucs-ec2-tools/debian/changelog
@@ -1,3 +1,11 @@
+ucs-ec2-tools (0.1.22-2) unstable; urgency=low
+
+  * ucs-ec2-create: upon creating a windows vm instead of an initial connect
+    ports 139 and 445 are scanned to se if vm is reachable (Bug #35850)
+  * utils.sh: added function install_ucs_windows_tools (Bug #35854)
+
+ -- Drees Dormann <dormann@univention.de>  Thu, 11 Sep 2014 16:14:28 +0200
+
 ucs-ec2-tools (0.1.22-1) unstable; urgency=low
 
   * Bug #34229: added additional packages for UCS@school auto test
