new certificate (Bug #35849)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53612 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-xen-gplpv/debian/changelog
+++ b/virtualization/univention-xen-gplpv/debian/changelog
@@ -1,3 +1,9 @@
+univention-xen-gplpv (11.0.372-2) unstable; urgency=low
+
+  * new certificate (Bug #35849)
+
+ -- Felix Botner <botner@univention.de>  Fri, 12 Sep 2014 11:43:18 +0200
+
 univention-xen-gplpv (11.0.372-1) unstable; urgency=low
 
   * Update to version 0.11.0.372 (Bug #29456)
