--- a/test/generate-appliance/debian/changelog
+++ b/test/generate-appliance/debian/changelog
@@ -1,3 +1,11 @@
+generate-appliance (0.1.2-0) unstable; urgency=medium
+
+  * Generate amd64 metadata (Bug #35756)
+  * Check tempdir is directory
+  * Revert OVA VMDK unification
+
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Fri, 12 Sep 2014 12:07:53 +0200
+
 generate-appliance (0.1.1-0) unstable; urgency=medium
 
   * Add --tempdir (Bug #35756)
