--- a/management/univention-dojo/debian/changelog
+++ b/management/univention-dojo/debian/changelog
@@ -1,3 +1,9 @@
+univention-dojo (8.0.0-2) unstable; urgency=low
+
+  * Bug #35764: Updated dojo to version 1.10
+
+ -- Alexander Kramer <kramer@univention.de>  Fri, 12 Sep 2014 13:47:06 +0200
+
 univention-dojo (8.0.0-1) unstable; urgency=low
 
   * Bug #35145: Start UCS 4.0 development
