--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,11 @@
+univention-virtual-machine-manager-daemon (4.0.0-9) unstable; urgency=low
+
+  * WIP: Integration of cloud instance management with libcloud (Bug #32842)
+   - Added EC2
+   - Refactoring and bugfixes
+
+ -- Erik Damrose <damrose@univention.de>  Fri, 12 Sep 2014 14:09:09 +0200
+
 univention-virtual-machine-manager-daemon (4.0.0-8) unstable; urgency=low
 
   * Improve error handling when loading ldap connections (Bug #32842) 
