Bug #35756: VirtualBox: Debian_64 instead of Linux_64
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53636 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/generate-appliance/debian/changelog
+++ b/test/generate-appliance/debian/changelog
@@ -1,3 +1,9 @@
+generate-appliance (0.2.1-1) unstable; urgency=medium
+
+  * VirtualBox: Debian_64 instead of Linux_64 (Bug #35756)
+
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Fri, 12 Sep 2014 14:32:46 +0200
+
 generate-appliance (0.2.1-0) unstable; urgency=medium
 
   * Make metadata configurable (Bug #35756)
