Bug #35406 DVD: Include (non-)free firmware files on DVD
Will dynamically update the task list containing the available firmware
and microcode files.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53640 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-dvd/debian/changelog
+++ b/base/univention-dvd/debian/changelog
@@ -1,3 +1,9 @@
+univention-dvd (0.2.0-15) unstable; urgency=low
+
+  * Bug #35406: Include (non-)free firmware files on DVD
+
+ -- Philipp Hahn <hahn@univention.de>  Fri, 12 Sep 2014 14:39:53 +0200
+
 univention-dvd (0.2.0-14) unstable; urgency=low
 
   * Bug #35659: Include xterm as default x-terminal-emulator
