Bug #35490, Bug #35532: - always set system/setup/boot/start=true during installation - do not set system/setup/boot/start to false during firefox startup - set system/setup/boot/start=false if USS is actually configuring the system
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53642 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,12 @@
+univention-system-setup (8.0.38-1) unstable; urgency=low
+
+  * Bug #35490, Bug #35532:
+    - always set system/setup/boot/start=true during installation
+    - do not set system/setup/boot/start to false during firefox startup
+    - set system/setup/boot/start=false if USS is actually configuring the system
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Fri, 12 Sep 2014 16:08:28 +0200
+
 univention-system-setup (8.0.38-2) unstable; urgency=low
 
   * Fixed wrong variable name in univention-system-setup
