* Bug #35764: Included patch for debugging problems
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53649 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-dojo/debian/changelog
+++ b/management/univention-dojo/debian/changelog
@@ -1,3 +1,9 @@
+univention-dojo (8.0.0-3) unstable; urgency=low
+
+  * Bug #35764: Included patch for debugging problems
+
+ -- Alexander Kramer <kramer@univention.de>  Mon, 15 Sep 2014 08:15:58 +0200
+
 univention-dojo (8.0.0-2) unstable; urgency=low
 
   * Bug #35764: Updated dojo to version 1.10
