Bug #35921 USS: Show debconf title while starting USS
Add debconf progress bar to show that Univention System Setup is being
started in the background.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53655 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.0.40-1) unstable; urgency=low
+
+  * Bug #35921: Show debconf title while starting USS
+
+ -- Philipp Hahn <hahn@univention.de>  Mon, 15 Sep 2014 10:20:43 +0200
+
 univention-system-setup (8.0.39-1) unstable; urgency=low
 
   * Bug #35490, Bug #35532:
@@ -10,8 +16,7 @@ univention-system-setup (8.0.39-1) unstable; urgency=low
 univention-system-setup (8.0.38-2) unstable; urgency=low
 
   * Fixed wrong variable name in univention-system-setup
-  * Fixed traqnslation in ApplianceWizard.js
-  	(Bug #34090)
+  * Fixed traqnslation in ApplianceWizard.js (Bug #34090)
 
  -- Drees Dormann <dormann@univention.de>  Mon, 08 Sep 2014 12:04:22 +0200
 
