Bug #35490, Bug #35532:     - set system/setup/boot/start=false if USS has finished
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53661 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,10 @@
+univention-system-setup (8.0.39-2) unstable; urgency=low
+
+  * Bug #35490, Bug #35532:
+    - set system/setup/boot/start=false if USS has finished
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Mon, 15 Sep 2014 14:00:48 +0200
+
 univention-system-setup (8.0.40-1) unstable; urgency=low
 
   * Bug #35921: Show debconf title while starting USS
