--- a/test/ucs-ec2-tools/debian/changelog
+++ b/test/ucs-ec2-tools/debian/changelog
@@ -1,3 +1,9 @@
+ucs-ec2-tools (1.0.1-4) unstable; urgency=low
+
+  * Bug #35767: Switch to updated UCS-4.0 EC2 AMI
+
+ -- Philipp Hahn <hahn@univention.de>  Tue, 16 Sep 2014 17:23:37 +0200
+
 ucs-ec2-tools (1.0.1-3) unstable; urgency=low
 
   * ucs-ec2-create: upon creating a windows vm instead of an initial connect
