Bug #35733 EC2: Re-enable reboot
Now that the boot ordering is right again, re-enable Jenkins to reboot
the VM after installation.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53709 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/debian/changelog
+++ b/test/ucs-ec2-tools/debian/changelog
@@ -1,6 +1,7 @@
 ucs-ec2-tools (1.0.1-4) unstable; urgency=low
 
   * Bug #35767: Switch to updated UCS-4.0 EC2 AMI
+  * Bug #35733: Re-enable reboot
 
  -- Philipp Hahn <hahn@univention.de>  Tue, 16 Sep 2014 17:23:37 +0200
 
