Bug #35729 lib: Fix stall in dpkg status pipe reading code
lib/PacketManager opens a pipe for STDOUT and STDERR for the forked dpkg
process. During package installation several daemons are launched, which
don't close their STDOUT / STDERR and this inherit the pipe for writing.

 # lsof | grep 210817
 univentio   718       root    3r     FIFO                0,8       0t0     210817 pipe
 rrd-graph  2809      idrrd    1w     FIFO                0,8       0t0     210817 pipe
 rrd-graph  2809      idrrd    2w     FIFO                0,8       0t0     210817 pipe
 cluster-s  2836       root    1w     FIFO                0,8       0t0     210817 pipe
 cluster-s  2836       root    2w     FIFO                0,8       0t0     210817 pipe
 cluster-s  2861       root    1w     FIFO                0,8       0t0     210817 pipe
 cluster-s  2861       root    2w     FIFO                0,8       0t0     210817 pipe
 md-config  2955   idnagios    1w     FIFO                0,8       0t0     210817 pipe
 md-config  2955   idnagios    2w     FIFO                0,8       0t0     210817 pipe

As the PaketManager is the sole reader of the pipe, it waits for all
writers to close the writing end, which then never happens.
Therefore the thread doing the read never terminates.
As the thread is not marked as a daemon thread, the whole application
never terminates, leading to a hanging process:
 # gdb -p 718
 (gdb) set pagination 0
 (gdb) thread apply all bt

 Thread 2 (Thread 0x7f562a5bb700 (LWP 775)):
 #0  0x00007f563d6ad88d in read () at ../sysdeps/unix/syscall-template.S:82
...
 #6  0x00000000004a7d25 in call_function (f=Frame 0x36bb8a0, for file /usr/lib/pymodules/python2.6/univention/lib/package_manager.py, line 213, in check_pipe ...

 Thread 1 (Thread 0x7f563ec10700 (LWP 718)):
 #0  sem_wait () at ../nptl/sysdeps/unix/sysv/linux/x86_64/sem_wait.S:86
...
 #20 0x00000000004c91a9 in wait_for_thread_shutdown () at ../Python/pythonrun.c:1709

Also pass the file descriptors and file obj

--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,9 @@
+univention-lib (4.0.3-2) unstable; urgency=low
+
+  * Bug #35729: Fix stall in dpkg status pipe reading code
+
+ -- Philipp Hahn <hahn@univention.de>  Tue, 16 Sep 2014 17:40:00 +0200
+
 univention-lib (4.0.3-1) unstable; urgency=medium
 
   * Bug #31319: make sure that atjobs is EINTR-safe
