* ucs-test-modules-all: added dependency to ucs-test-udm-   customattribute, ucs-test-udm-groups, ucs-test-udm-printers and   ucs-test-udm-syntax (Bug #32934)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53718 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,11 @@
+ucs-test (4.0.166-80) unstable; urgency=medium
+
+  * ucs-test-modules-all: added dependency to ucs-test-udm-
+    customattribute, ucs-test-udm-groups, ucs-test-udm-printers and
+    ucs-test-udm-syntax (Bug #32934)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 17 Sep 2014 08:00:52 +0200
+
 ucs-test (4.0.166-79) unstable; urgency=medium
 
   * 53_samba-common/50quota: added more debug (Bug #35844)
