--- a/virtualization/univention-virtual-machine-manager-schema/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-schema/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-schema (5.0.1-4) unstable; urgency=low
+
+  * Added available cloud types to joinscript (Bug #35943)
+
+ -- Erik Damrose <damrose@univention.de>  Wed, 17 Sep 2014 12:11:21 +0200
+
 univention-virtual-machine-manager-schema (5.0.1-3) unstable; urgency=low
 
   * Fix default container for cloud type (Bug #32842)
