* Bug #34765: code cleanup
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53725 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-supphealth/debian/changelog
+++ b/management/univention-management-console-module-supphealth/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-supphealth (1.0.1-1) unstable; urgency=low
+
+  * Bug #34765: code cleanup
+
+ -- Florian Best <best@univention.de>  Wed, 17 Sep 2014 12:22:33 +0200
+
 univention-management-console-module-supphealth (1.0.0-1) unstable; urgency=low
 
   * Starting UCS 4.0-0 development (Bug #34765)
