* Added EC2 connection wizard (Bug #35943) * Filter empty attributes before calling libcloud (Bug #35950)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53729 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,10 @@
+univention-virtual-machine-manager-daemon (4.0.0-10) unstable; urgency=low
+
+  * Added EC2 connection wizard (Bug #35943)
+  * Filter empty attributes before calling libcloud (Bug #35950)
+
+ -- Erik Damrose <damrose@univention.de>  Wed, 17 Sep 2014 15:39:04 +0200
+
 univention-virtual-machine-manager-daemon (4.0.0-9) unstable; urgency=low
 
   * WIP: Integration of cloud instance management with libcloud (Bug #32842)
