--- a/desktop/firefox-en/debian/changelog
+++ b/desktop/firefox-en/debian/changelog
@@ -1,3 +1,9 @@
+firefox-en (1:24.8.0esr-1) unstable; urgency=medium
+
+  * Update to Firefox 24.8 ESR (Bug #35807)
+
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Wed, 17 Sep 2014 14:35:35 +0200
+
 firefox-en (1:24.7.0esr-1) unstable; urgency=medium
 
   * Update to Firefox 24.7 ESR (Bug #35444)
