Add openstack instance wizard (Bug #35942)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53734 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-daemon (4.0.0-11) unstable; urgency=low
+
+  * Add openstack instance wizard (Bug #35942)
+
+ -- Andreas Peichert <peichert@univention.de>  Wed, 17 Sep 2014 16:53:27 +0200
+
 univention-virtual-machine-manager-daemon (4.0.0-10) unstable; urgency=low
 
   * Added EC2 connection wizard (Bug #35943)
