--- a/base/univention-bootsplash/debian/changelog
+++ b/base/univention-bootsplash/debian/changelog
@@ -1,3 +1,9 @@
+univention-bootsplash (6.0.1-1) unstable; urgency=low
+
+  * new bootsplash layout (Bug #35935) 
+
+ -- Felix Botner <botner@univention.de>  Wed, 17 Sep 2014 17:14:53 +0200
+
 univention-bootsplash (6.0.0-1) unstable; urgency=medium
 
   * Update to UCS 4.0 (Bug #35267)
