--- a/base/univention-grub/debian/changelog
+++ b/base/univention-grub/debian/changelog
@@ -1,3 +1,9 @@
+univention-grub (8.0.2-1) unstable; urgency=low
+
+  * new grub background (Bug #35934) 
+
+ -- Felix Botner <botner@univention.de>  Wed, 17 Sep 2014 17:25:06 +0200
+
 univention-grub (8.0.1-1) unstable; urgency=low
 
   * Update to UCR templates to new upstream versions (Bug #35138)
