generate-appliance (0.2.2-1) unstable; urgency=medium
  * VirtualBox: Change to USB default disabled (Bug #35756)
  * ESXi: Change filename

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53737 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/generate-appliance/debian/changelog
+++ b/test/generate-appliance/debian/changelog
@@ -1,3 +1,10 @@
+generate-appliance (0.2.2-1) unstable; urgency=medium
+
+  * VirtualBox: Change to USB default disabled (Bug #35756)
+  * ESXi: Change filename
+
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Wed, 17 Sep 2014 17:27:16 +0200
+
 generate-appliance (0.2.1-1) unstable; urgency=medium
 
   * VirtualBox: Debian_64 instead of Linux_64 (Bug #35756)
