--- a/virtualization/univention-xen-gplpv/debian/changelog
+++ b/virtualization/univention-xen-gplpv/debian/changelog
@@ -1,3 +1,9 @@
+univention-xen-gplpv (11.0.373-1) unstable; urgency=low
+
+  * pseudo update to fix cert update (Bug #35849)  
+
+ -- Felix Botner <botner@univention.de>  Wed, 17 Sep 2014 17:55:30 +0200
+
 univention-xen-gplpv (11.0.372-3) unstable; urgency=low
 
   * fixed update (Bug #35849) 
