--- a/management/univention-management-console-module-diagnostic/debian/changelog
+++ b/management/univention-management-console-module-diagnostic/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-diagnostic (1.0.2-1) unstable; urgency=low
+
+  * Bug #34765: rewrite
+  * add i18n support
+
+ -- Florian Best <best@univention.de>  Wed, 17 Sep 2014 18:09:10 +0200
+
 univention-management-console-module-diagnostic (1.0.1-1) unstable; urgency=low
 
   * Bug #34765: code cleanup
