grub/gfxpayload as default for linux video mode (Bug #28604)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53743 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-grub/debian/changelog
+++ b/base/univention-grub/debian/changelog
@@ -1,3 +1,9 @@
+univention-grub (8.0.3-1) unstable; urgency=low
+
+  * grub/gfxpayload as default for linux video mode (Bug #28604)
+
+ -- Felix Botner <botner@univention.de>  Wed, 17 Sep 2014 18:32:34 +0200
+
 univention-grub (8.0.2-1) unstable; urgency=low
 
   * new grub background (Bug #35934) 
