* added function promote_ad_windows tu utils.sh ( for promoting   an win2k8/2k12 server to ad-domaincontroller ) (Bug #35855)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53750 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/debian/changelog
+++ b/test/ucs-ec2-tools/debian/changelog
@@ -1,3 +1,10 @@
+ucs-ec2-tools (0.1.22-3) unstable; urgency=low
+
+  * added function promote_ad_windows tu utils.sh ( for promoting
+    an win2k8/2k12 server to ad-domaincontroller ) (Bug #35855)
+
+ -- Drees Dormann <dormann@univention.de>  Thu, 18 Sep 2014 09:50:53 +0200
+
 ucs-ec2-tools (0.1.22-2) unstable; urgency=low
 
   * ucs-ec2-create: upon creating a windows vm instead of an initial connect
