new menu colors (Bug #35934)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53751 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-grub/debian/changelog
+++ b/base/univention-grub/debian/changelog
@@ -1,3 +1,9 @@
+univention-grub (8.0.3-2) unstable; urgency=low
+
+  * new menu colors (Bug #35934) 
+
+ -- Felix Botner <botner@univention.de>  Thu, 18 Sep 2014 09:53:17 +0200
+
 univention-grub (8.0.3-1) unstable; urgency=low
 
   * grub/gfxpayload as default for linux video mode (Bug #28604)
