* added function promote_ad_windows tu utils.sh ( for promoting   an win2k8/2k12 server to ad-domaincontroller ) (Bug #35855)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53752 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/debian/changelog
+++ b/test/ucs-ec2-tools/debian/changelog
@@ -1,3 +1,10 @@
+ucs-ec2-tools (1.0.1-5) unstable; urgency=low
+
+  * added function promote_ad_windows tu utils.sh ( for promoting
+    an win2k8/2k12 server to ad-domaincontroller ) (Bug #35855)
+
+ -- Drees Dormann <dormann@univention.de>  Thu, 18 Sep 2014 09:50:53 +0200
+
 ucs-ec2-tools (1.0.1-4) unstable; urgency=low
 
   * Bug #35767: Switch to updated UCS-4.0 EC2 AMI
