--- a/test/generate-appliance/debian/changelog
+++ b/test/generate-appliance/debian/changelog
@@ -1,3 +1,9 @@
+generate-appliance (0.2.3-1) unstable; urgency=low
+
+  * Cleanup of virtualbox xml to support import on MS Windows (Bug #35756) 
+
+ -- Erik Damrose <damrose@univention.de>  Thu, 18 Sep 2014 10:40:09 +0200
+
 generate-appliance (0.2.2-1) unstable; urgency=medium
 
   * VirtualBox: Change to USB default disabled (Bug #35756)
