Bug #35934 grub: Fix shell script syntax error
$ bash -n debian/univention-grub.postinst
debian/univention-grub.postinst: Zeile 121: Syntax Fehler: Unerwartetes Dateiende.

Remove backslash before 'fi'.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53755 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-grub/debian/changelog
+++ b/base/univention-grub/debian/changelog
@@ -1,3 +1,9 @@
+univention-grub (8.0.3-3) unstable; urgency=low
+
+  * Bug #35934: Fix shell script syntax error in last commi
+
+ -- Philipp Hahn <hahn@univention.de>  Thu, 18 Sep 2014 11:09:47 +0200
+
 univention-grub (8.0.3-2) unstable; urgency=low
 
   * new menu colors (Bug #35934) 
