* /python/ec2/lib.py: fixed wrong port format in def connect   (Bug #35850)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53756 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/debian/changelog
+++ b/test/ucs-ec2-tools/debian/changelog
@@ -1,3 +1,10 @@
+ucs-ec2-tools (0.1.22-4) unstable; urgency=low
+
+  * /python/ec2/lib.py: fixed wrong port format in def connect
+    (Bug #35850)
+
+ -- Drees Dormann <dormann@univention.de>  Thu, 18 Sep 2014 11:08:59 +0200
+
 ucs-ec2-tools (0.1.22-3) unstable; urgency=low
 
   * added function promote_ad_windows tu utils.sh ( for promoting
