--- a/management/univention-management-console-module-diagnostic/debian/changelog
+++ b/management/univention-management-console-module-diagnostic/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-diagnostic (1.0.3-1) unstable; urgency=low
+
+  * Bug #35864: add a plugin for checking of  network settings (gateway, DNS,
+  	proxy)
+
+ -- Florian Best <best@univention.de>  Thu, 18 Sep 2014 12:39:53 +0200
+
 univention-management-console-module-diagnostic (1.0.2-1) unstable; urgency=low
 
   * Bug #34765: rewrite
