--- a/desktop/univention-kdm/debian/changelog
+++ b/desktop/univention-kdm/debian/changelog
@@ -1,3 +1,9 @@
+univention-kdm (1.0.0-2) unstable; urgency=low
+
+  * added theme/config (Bug #35936) 
+
+ -- Felix Botner <botner@univention.de>  Fri, 19 Sep 2014 10:54:05 +0200
+
 univention-kdm (1.0.0-1) unstable; urgency=low
 
   * new kdm theme (Bug #35936)
